[gd_scene load_steps=2 format=3 uid="uid://bxls3wxyigrs7"]

[ext_resource type="Script" path="res://Prog52a.gd" id="1_8ntd1"]

[node name="Prog52a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8ntd1")

[node name="Length" type="Label" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 36.0
offset_right = 188.0
offset_bottom = 101.0
text = "Length:"

[node name="Width" type="Label" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 80.0
offset_right = 97.0
offset_bottom = 112.0
text = "Width:"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.085
anchor_top = 0.057
anchor_right = 0.173
anchor_bottom = 0.105
offset_left = 15.08
offset_top = 0.0639992
offset_right = 17.704
offset_bottom = -0.0400009

[node name="LineEdit2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 113.0
offset_top = 76.0
offset_right = 216.0
offset_bottom = 107.0

[node name="Area" type="Label" parent="."]
layout_mode = 0
offset_left = 35.0
offset_top = 165.0
offset_right = 255.0
offset_bottom = 205.0
text = "Area:"

[node name="Perim" type="Label" parent="."]
layout_mode = 0
offset_left = 35.0
offset_top = 209.0
offset_right = 255.0
offset_bottom = 249.0
text = "Perimeter:"

[node name="calc" type="Button" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 250.0
offset_right = 141.0
offset_bottom = 329.0
text = "Calculate"

[node name="clear" type="Button" parent="."]
layout_mode = 0
offset_left = 210.0
offset_top = 250.0
offset_right = 325.0
offset_bottom = 329.0
text = "Clear"

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 389.0
offset_top = 250.0
offset_right = 504.0
offset_bottom = 329.0
text = "Exit"

[connection signal="pressed" from="calc" to="." method="_on_calc_pressed"]
[connection signal="pressed" from="clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
